@@ -2,6 +2,7 @@ Changelog file for Login component.
 
 Login 1.3.2-pl
 ====================================
+- [#24] Fixed issue where inactive user could re-register
 - Fixed issue with embedded chunk type display
 - Fixed issue with redirects and non-FURLs on Register snippet
 
